<resources>
    <string name="app_name">RentGuru</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_list">My Products List</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_search">Search</string>
    <string name="action_category">Category</string>
    <string name="product_details">Product Details</string>
    <string name="rent_now">RENT NOW</string>
    <string name="rent_fee">Rent Fee</string>
    <string name="overview">Overview:</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="remarks">"Remarks"</string>
    <string name="search_product_text">Search Product</string>
    <string name="search_hint">Search</string>
    <string name="category_search_optional">Choose Category (optional)</string>
    <string name="find_location_text">Search by Location</string>
    <string name="edit_profile_text">Edit Profile</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="paypal_setings_text">Paypal Account Email</string>
    <string name="save">Save</string>
    <string name="no_my_product_text">Please Upload a product to be rented</string>
    <string name="category">Category</string>
    <string name="sub_cateory">Sub Category</string>
    <string name="update_product_info">Update Product</string>
    <string name="product_title">Product Title</string>
    <string name="change_profile_image">Change Profile Image</string>
    <string name="add_new_image">Add New Product Image</string>
    <string name="choose_product_location">Choose Location from Map (optional)</string>
    <string name="rent_request">Rent Request</string>
    <string name="my_booking">My Booking</string>
    <string name="order_information_text">Order Information</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_post_product">"ADD YOUR ITEMS"</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Post RentalProduct placeholder text -->
    <string name="post_product_category_spinner">Select Category</string>
    <string name="post_product_sub_category_spinner">Select Sub Category</string>
    <string name="availability">Availability</string>
    <string name="product_location">Area</string>
    <string name="product_description">Product Description</string>
    <string name="add_image">Add Image</string>
    <string name="title_activity_rent_details">ORDER INFORMATION</string>
    <string name="facebook_app_id">716726128465452</string>
    <string name="add_new_button_text">Add New Product</string>
    <string name="return_product_text">Have you received your product?</string>
    <string name="state">State</string>


</resources>
