<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_layout_rent_activity"
    tools:context="wsit.rentguru.activity.RentActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    >




    <LinearLayout
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            android:textStyle="bold"
            android:paddingBottom="10dp"
            android:textSize="14sp"
            />

        <Button
                android:id="@+id/startDate"
                android:background="@drawable/edittext_rectangle_box"
                android:padding="10dp"
                android:textSize="14sp"
                android:textStyle="normal"
                android:gravity="center|left"
                android:layout_width="match_parent"
                android:layout_height="60dp" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            android:textStyle="bold"
            android:paddingBottom="10dp"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            />


        <Button
                android:id="@+id/endDate"
                android:background="@drawable/edittext_rectangle_box"
                android:padding="10dp"
                android:gravity="center|left"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="60dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remarks"
            android:textStyle="bold"
            android:paddingBottom="10dp"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            />




        <EditText
            android:id="@+id/remarks"
            android:background="@drawable/edittext_rectangle_box"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:padding="10dp"
            android:textSize="14sp"
            />



        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/confirm_button_rent"
            android:background="@color/next_button"
            android:padding="10dp"
            android:text="Rent Now"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="60dp" />


    </LinearLayout>

</RelativeLayout>

</ScrollView>
