<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="wsit.rentguru.activity.ProductDetailsActivity">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    >


    <TextView
        android:id="@+id/product_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="Product Title"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textColor="@android:color/black"
        />

    <ImageView
        android:id="@+id/product_picture"
        android:layout_below="@+id/product_title"
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_height="260dp">

    </ImageView>

    <ImageView
        android:id="@+id/like_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_favorite"
        android:background="@android:color/black"
        android:padding="10dp"
        android:layout_below="@+id/product_title"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp" />


    <LinearLayout
        android:id="@+id/rating_layout"
        android:layout_alignBottom="@+id/product_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:gravity="center"
        android:background="#59EEEEEE"
        >

        <RatingBar
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/ratingBarStyleIndicator"
            android:numStars="5"
            android:stepSize="0.5"
            android:isIndicator="false"
            android:rating="4.0"
            android:progressTint="@color/loading"
            />

    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/select_other_image"
        android:layout_marginRight="15dp"
        android:layout_marginTop="-15dp"
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:showDividers="middle"
        android:layout_below="@+id/rating_layout"
        >

    </android.support.v7.widget.RecyclerView>


    <Button
        android:id="@+id/rent_now_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/rent_now"
        android:layout_below="@+id/select_other_image"
        android:layout_margin="15dp"
        android:background="@drawable/rent_now_button_background"
        />


    <LinearLayout
        android:id="@+id/details_layout"
        android:layout_below="@+id/rent_now_button"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.5"
                    android:textSize="14sp"
                    android:padding="10dp"
                    android:gravity="left"
                    android:textColor="@android:color/black"
                    android:background="@drawable/table_border"
                    android:text="@string/rent_fee"
                    />

                <TextView
                android:id="@+id/rent_fee"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1.5"
                android:textSize="14sp"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:background="@drawable/table_border_value"
                />

            </TableRow>

            <TableRow>


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.5"
                    android:textSize="14sp"
                    android:padding="10dp"
                    android:gravity="left"
                    android:textColor="@android:color/black"
                    android:background="@drawable/table_border"
                    android:text="@string/availability"
                    />

                <TextView
                    android:id="@+id/available_time"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1.5"
                    android:textSize="14sp"
                    android:padding="10dp"
                    android:gravity="left"
                    android:textColor="@android:color/black"
                    android:background="@drawable/table_border_value"
                    />


            </TableRow>


            <TableRow>


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.5"
                    android:textSize="14sp"
                    android:padding="10dp"
                    android:gravity="left"
                    android:textColor="@android:color/black"
                    android:background="@drawable/table_border"
                    android:text="@string/action_category"
                    />

                <TextView
                    android:id="@+id/category_name"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1.5"
                    android:textSize="14sp"
                    android:padding="10dp"
                    android:gravity="left"
                    android:textColor="@android:color/black"
                    android:background="@drawable/table_border_value"
                    />


            </TableRow>




        </TableLayout>


    </LinearLayout>


    <TextView
        android:layout_below="@+id/details_layout"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/overview_text"
        android:textSize="14sp"
        android:text="@string/overview"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_below="@+id/overview_text"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="15dp"
        android:textSize="12sp"
        android:id="@+id/overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>



</RelativeLayout>
</ScrollView>