<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0ECE6"
    android:fillViewport="true"
    android:scrollbars="vertical"
    android:animateLayoutChanges="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F0ECE6"
        android:focusableInTouchMode="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/second_child">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:id="@+id/category_title_text"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:textColor="@color/staggered_below_color"
                />
            <Spinner
                android:id="@+id/product_category"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"

                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edittext_rectangle_box"
                android:gravity="center|left"
                android:textSize="14sp"
                android:paddingLeft="10dp"
                android:drawableRight="@drawable/ic_down_arrow"
                android:layout_below="@+id/category_title_text"
                />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_cateory"
                android:id="@+id/category_sub_title_text"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="16sp"
                android:textColor="@color/staggered_below_color"
                />
            <Spinner
                android:id="@+id/product_sub_category"
                android:layout_below="@+id/product_category"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center|left"
                android:visibility="gone"
                android:paddingLeft="10dp"
                android:background="@android:color/white"
                android:drawableRight="@drawable/ic_down_arrow"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/product_title"
                android:textSize="16sp"
                android:textColor="@color/staggered_below_color"
                />


        </LinearLayout>


        <EditText
            android:id="@+id/product_title"
            android:layout_below="@+id/second_child"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/white"
            android:hint="PRODUCT TITLE"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:gravity="center|left"
            android:padding="10dp"
            android:textSize="14sp"
            android:textColorHint="#000000"
            android:layout_height="40dp" />

        <LinearLayout
            android:id="@+id/availability_layout"
            android:layout_below="@+id/product_title"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/availability"
                android:textColor="@color/staggered_below_color"
                android:paddingBottom="10dp"
                android:textSize="16sp"
                />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <Button
                    android:id="@+id/from"
                    android:background="@android:color/white"
                    android:hint="FROM"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:padding="10dp"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:textColorHint="#000000"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"/>

                <Button
                    android:id="@+id/to"
                    android:background="@android:color/white"
                    android:hint="TO"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:padding="10dp"
                    android:textSize="14sp"
                    android:textColorHint="#000000"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"/>



            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/product_location_layout"
            android:layout_below="@+id/availability_layout"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_location"

                android:paddingBottom="10dp"
                android:textSize="16sp"
                android:textColor="@color/staggered_below_color"
                />

            <EditText
                android:id="@+id/area"
                android:background="@android:color/white"
                android:hint="Area"
                android:gravity="center|left"
                android:padding="10dp"
                android:textSize="14sp"
                android:textColorHint="#000000"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:layout_marginBottom="10dp"
                />


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <EditText
                    android:id="@+id/zipCode"
                    android:background="@android:color/white"
                    android:hint="Zip Code"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:padding="10dp"
                    android:textSize="14sp"
                    android:textColorHint="#000000"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:layout_marginRight="10dp"/>

                <EditText
                    android:id="@+id/city"
                    android:background="@android:color/white"
                    android:hint="City"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:padding="10dp"
                    android:textSize="14sp"
                    android:singleLine="true"
                    android:imeOptions="actionDone"
                    android:textColorHint="#000000"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"/>



            </LinearLayout>


            <TextView
                android:id="@+id/product_description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:textColor="@color/staggered_below_color"
                android:textSize="16sp"
                android:text="@string/product_description"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/product_description"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="100dp"
                android:layout_below="@+id/product_description_text"
                android:background="@drawable/edittext_rectangle_box"

                />





            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Current value"
                android:textSize="16sp"
                android:textColor="@color/staggered_below_color"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/current_value"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext_rectangle_box"
                android:padding="10dp"
                android:textSize="14sp"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:hint="Current market price in USD....."
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Rent fee"
                android:textSize="16sp"
                android:textColor="@color/staggered_below_color"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/rent_actual_fee"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="number"
                android:background="@drawable/edittext_rectangle_box"
                android:padding="10dp"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:hint="How much customer gonna pay?"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Select Rent Type"
                android:textSize="16sp"

                android:textColor="@color/staggered_below_color"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>
            <Spinner
                android:id="@+id/rent_Type_Spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:background="@drawable/edittext_rectangle_box"
                >

            </Spinner>

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/update_product_info"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/staggered_below_color"
                android:textColor="@color/textColorPrimary"

                />

        </LinearLayout>




    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>